Update and rename Suthir..html to index.html

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ padding-left:20px;
 <body>
 <header>
 <div class="header-content">
-<img src="./Suthir._files/suthir.jpeg" alt="Your Profile Picture" class="profile-picture">
+<img src="suthir.jpeg" alt="Your Profile Picture" class="profile-picture">
 <h1>Mr.SUTHIR K</h1>
 <p> Web Developer</p>
 </div>
@@ -168,7 +168,7 @@ padding-left:20px;
 </div>
 </section>
 <footer>
-<p>©2023 Suthir Kamaraj</p>
+<p>Â©2023 Suthir Kamaraj</p>
 </footer>
 <script>
 // Smooth scrolling to section when clicking on navigation links
